--- a/less/component/icon.less
+++ b/less/component/icon.less
@@ -12,64 +12,70 @@
 }
 //----- 表单 -----
 .icon-add{  // 添加
-	background-image: url("../image/default/add.png");
+	background-image: url("../image/default/icon/icon-add.png");
 }
 .icon-edit{ // 编辑
-	background-image: url("../image/default/edit.png");
+	background-image: url("../image/default/icon/icon-edit.png");
 }
 .icon-delete{   // 删除
-	background-image: url("../image/default/delete.png");
+	background-image: url("../image/default/icon/icon-delete.png");
 }
 .icon-filter{   // 过滤
-	background-image: url("../image/default/filter.png");
+	background-image: url("../image/default/icon/icon-filter.png");
 }
 .icon-reset{    // 重置
-	background-image: url("../image/default/reset.png");
+	background-image: url("../image/default/icon/icon-reset.png");
 }
 .icon-save{ // 保存
-	background-image: url("../image/default/save.png");
+	background-image: url("../image/default/icon/icon-save.png");
 }
 .icon-addFile{  // 添加文件
-	background-image: url("../image/default/addFile.png");
+	background-image: url("../image/default/icon/icon-addFile.png");
+}
+.icon-favor{    // 收藏
+	background-image: url("../image/default/icon/icon-favor.png");
+}
+.icon-close{    // 关闭
+	background-image: url("../image/default/icon/icon-close.png");
 }
 //----- 全屏显示 -----
 .icon-fullScreen{   // 全屏显示
-	background-image: url("../image/default/fullScreen.png");
+	background-image: url("../image/default/icon/icon-fullScreen.png");
 }
 .icon-fullScreenClose{  // 关闭全屏显示
-	background-image: url("../image/default/fullScreen-close.png");
+	background-image: url("../image/default/icon/icon-fullScreen-close.png");
 }
 //----- 方向箭头 -----
 .icon-arrow-d{  // 指向下的三角形
-	background-image: url("../image/default/arrow-d.png");
+	background-image: url("../image/default/icon/icon-arrow-d.png");
 }
 .icon-arrow-l{  // 指向左的三角形
-	background-image: url("../image/default/arrow-l.png");
+	background-image: url("../image/default/icon/icon-arrow-l.png");
 }
 .icon-arrow-r{  // 指向右的三角形
-	background-image: url("../image/default/arrow-r.png");
+	background-image: url("../image/default/icon/icon-arrow-r.png");
 }
 .icon-arrow-u{  // 指向上的三角形
-	background-image: url("../image/default/arrow-u.png");
+	background-image: url("../image/default/icon/icon-arrow-u.png");
 }
 
 //----- icon-big 大图标 -----
 // 图片大小为 50 * 50，添加左边距 50px，位置 5px 5px
-.icon-big{
-
-}
-.icon-home{
-
-}
-.icon-menu{
-
-}
-.icon-backTop{
-
-}
-.icon-copyright{
-
-}
+//.icon-big{
+//
+//}
+//.icon-home{
+//
+//}
+//.icon-menu{
+//
+//}
+//.icon-backTop{
+//
+//}
+//.icon-copyright{
+//
+//}
 
 
 //----- icon-CSS CSS 图标 -----
