--- a/less/module/blog.less
+++ b/less/module/blog.less
@@ -7,10 +7,10 @@
 //---------- Blog 博客文章 ----------
 .module-blog{
 //    .metroBgSprite(3);
-	background-image: url("../image/metro/Blog.png");
+	background-image: url("../image/default/metro/Blog.png");
 
     .module_title{
-        background-image:url("../image/default/blog.png");
+        background-image:url("../image/default/metro-small/blog.png");
     }
 
 	.module_content{
