--- a/less/module/calendar.less
+++ b/less/module/calendar.less
@@ -7,7 +7,7 @@
 //---------- Calendar 日历 ----------
 .module-calendar{
 //    .metroBgSprite(4);
-	background-image: url("../image/metro/Calendar.png");
+	background-image: url("../image/default/metro/Calendar.png");
 
 //    ul{
 //        margin-right:-5px;
