--- a/less/module/document.less
+++ b/less/module/document.less
@@ -9,12 +9,12 @@
 //---------- Document 文档 ---------
 .module-document{
 //    .metroBgSprite(1);
-	background-image: url("../image/metro/Document.png");
+	background-image: url("../image/default/metro/Document.png");
 
 	font-weight: bold;
 
     .module_title{
-        background-image:url("../image/default/document.png");
+        background-image:url("../image/default/metro-small/document.png");
     }
 
     .module_content{
