--- a/less/module/editor.less
+++ b/less/module/editor.less
@@ -8,10 +8,10 @@
 //---------- Editor 在线编辑器 ----------
 .module-editor{
 //    .metroBgSprite(2);
-	background-image: url("../image/metro/Editor.png");
+	background-image: url("../image/default/metro/Editor.png");
 
     .module_title{
-        background-image:url("../image/default/editor.png");
+        background-image:url("../image/default/metro-small/editor.png");
     }
 
 	.icon-add{
