--- a/less/module/favorite.less
+++ b/less/module/favorite.less
@@ -6,10 +6,10 @@
 
 //---------- Favorite 收藏夹 ----------
 .module-favor{
-	background-image: url("../image/metro/Favorite.png");
+	background-image: url("../image/default/metro/Favorite.png");
 
     .module_title{
-        background-image:url("../image/default/favorite.png");
+        background-image:url("../image/default/metro-small/favorite.png");
     }
 
     .module_content{
