--- a/less/module/header.less
+++ b/less/module/header.less
@@ -32,7 +32,6 @@
 	}
 
 	.btn{
-
 		width: 70px;
 		height: 70px;
 
@@ -48,22 +47,6 @@
 
 	.btn-backTop{
 		margin-right: 0;
-	}
-
-	.menu{
-		position: absolute;
-		top: 70px;
-		left: 0;
-		right: 0;
-
-		margin: 0 -5px;
-		background: #fff;
-
-		.boxShadow(5px 5px 5px #888);
-
-		.btn-link{
-			margin: 10px 5px 0;
-		}
 	}
 }
 .module-header{
@@ -91,4 +74,52 @@
 //        height: 50px;
 //        width: 140px;
 //    }
+}
+
+//----- menu 菜单 -----
+/**
+ * 这是一个基于业务的组件，故放在此处
+ */
+.menu{
+	position: absolute;
+	top: 70px;
+	left: 0;
+	right: 0;
+
+	margin: 0 -5px;
+	background: #fff;
+
+	.boxShadow(5px 5px 5px #888);
+
+	.btn-link{
+		margin: 10px 5px 0;
+	}
+}
+
+.menu_item{
+
+}
+.menu_item-home{
+	background-image: url("../image/default/menu/menu_item-home.png");
+}
+.menu_item-copyright{
+	background-image: url("../image/default/menu/menu_item-copyright.png");
+}
+.menu_item-blog{
+	background-image: url("../image/default/menu/menu_item-blog.png");
+}
+.menu_item-document{
+	background-image: url("../image/default/menu/menu_item-document.png");
+}
+.menu_item-editor{
+	background-image: url("../image/default/menu/menu_item-editor.png");
+}
+.menu_item-favorite{
+	background-image: url("../image/default/menu/menu_item-favorite.png");
+}
+.menu_item-rss{
+	background-image: url("../image/default/menu/menu_item-rss.png");
+}
+.menu_item-palette{
+	background-image: url("../image/default/menu/menu_item-palette.png");
 }
