--- a/less/module/module.less
+++ b/less/module/module.less
@@ -68,7 +68,7 @@
 
 //----- 模块标题 建议标签 h2 -----
 .module_title{
-    text-align: center;
+//    text-align: center;
     text-transform: capitalize;
 }
 //----- 模块内容 -----
@@ -133,11 +133,11 @@
         min-height: @module-main-title-height;
 
         background-repeat: no-repeat;
-        background-position: 5px;
+        background-position: 10px;
 
         line-height: @module-main-title-height;
 
-        text-indent: 40px;
+        text-indent: 45px;
     }
 
     .module_content{
