--- a/less/module/palette.less
+++ b/less/module/palette.less
@@ -7,10 +7,10 @@
 //---------- Palette 调色板 ----------
 .module-palette{
 //    .metroBgSprite(0);
-	background-image: url("../image/metro/Palette.png");
+	background-image: url("../image/default/metro/Palette.png");
 
     .module_title{
-        background-image:url("../image/default/palette.png");
+        background-image:url("../image/default/metro-small/palette.png");
     }
 
     .module_content{
