--- a/less/component/input.less
+++ b/less/component/input.less
@@ -39,3 +39,10 @@
 .input-right{// 输入值合法时
     background: @input-right-bg;
 }
+
+input[type="checkbox"]{
+	float: left;
+	height: 20px;
+	width: 20px;
+	margin: 5px;
+}
