--- a/less/lib/grid.less
+++ b/less/lib/grid.less
@@ -24,7 +24,7 @@
     width: @grid-unit * @x - @space - @border-width *2;
 }
 
-@header-height: @grid-unit *2 - @space;    // 页头高度
+@header-height: @grid-unit *2 - @grid-space;    // 页头高度
 
 @footer-height: @grid-unit *2 - @grid-space;    // 页脚高度
 
