--- a/less/module/header.less
+++ b/less/module/header.less
@@ -16,7 +16,7 @@
 
     height: @header-height;
 
-    background: #fff;
+    background: #fff;   //#392f41;    //
 
 	.boxShadow(5px 5px 5px #888);
 
@@ -26,7 +26,7 @@
 	.module{
 		float: none;
 		height: 70px;
-		margin: 0 auto;
+		margin: 5px auto 0;
 
 		background-color: transparent;
 	}
@@ -41,8 +41,13 @@
 		margin: 0 @space 0 0;
 		padding: 0;
 
+//		background-color: transparent;
 		background-position: 10px 10px !important;
 		background-repeat: no-repeat;
+	}
+
+	.btn:hover{
+		background-color: @a-hover;
 	}
 
 	.btn-backTop{
@@ -87,7 +92,7 @@
 	right: 0;
 
 	margin: 0 -5px;
-	background: #fff;
+	background: #fff;   //#392f41;    //
 
 	.boxShadow(5px 5px 5px #888);
 
