--- a/less/module/user.less
+++ b/less/module/user.less
@@ -2,5 +2,5 @@
 
 //---------- User 个人中心 ----------
 .module-user{
-	background-image: url("../image/metro/User.png");
+	background-image: url("../image/default/metro/User.png");
 }
