--- a/less/component/component.less
+++ b/less/component/component.less
@@ -13,6 +13,8 @@
 
 @import "input.less";   // 表单项
 
+@import "code.less";    // 行内代码
+
 @import "msg.less";     // 消息
 
 @import "scrollBar.less";   // 滚动条
