--- a/less/module/document.less
+++ b/less/module/document.less
@@ -69,6 +69,15 @@
         margin:0;
     }
 
+	/**
+	 * @extend  ../component/code.less
+	 */
+	span.code{
+		display: inline-block;
+		text-indent: 0;
+		line-height: 150%;
+	}
+
     table{
         width: 100%;
     }
