--- a/less/component/code.less
+++ b/less/component/code.less
@@ -1,4 +1,11 @@
 @charset "utf-8";
 
 //----- Code 代码 -----
-.code{}
+/*span*/.code{
+	padding: 2px 4px;
+	font-size: 90%;
+	color: #c7254e;
+	white-space: nowrap;
+	background-color: #f9f2f4;
+	border-radius: 4px;
+}
