--- a/less/module/document.less
+++ b/less/module/document.less
@@ -68,7 +68,9 @@
     p{
         margin:0;
     }
-
+	ol{
+		text-indent: 0;
+	}
 	/**
 	 * @extend  ../component/code.less
 	 */
@@ -95,7 +97,7 @@
 
         border: 1px solid @border-color;
         margin: 0 !important;
-        padding: @space 0;
+        padding: 5px 0;
 
         text-indent:0;
     }
