--- a/less/module/header.less
+++ b/less/module/header.less
@@ -99,78 +99,71 @@
 	background: #fff;   //#392f41;    //
 
 	.boxShadow(5px 5px 5px #888);
-}
 
-.menu_item{
-	float: none;
-	display: block;
-	width: auto !important;
+	.btn-menuItem{
+		float: none;
+		display: block;
+		width: auto !important;
 
-	margin: 10px 5px 0;
-	padding: 0 0 0 120px;
-
-	font-size: 24px;
-	font-weight: bold;
-	line-height: 35px;
-	text-align: left;
-	text-indent: -40px;
-	text-transform: capitalize;
+		margin: 10px 5px 0;
+		padding: 0 0 0 120px;
+	}
 }
-.menu_item:before{
-	float: left;
-	height: 70px;
-	width: 70px;
-	
-	margin-left: -120px;
-	background: no-repeat 10px 10px;
-	
-	content: "";
+/**
+ * 这些是根据业务功能来定制的背景图片及背景颜色
+ */
+.btn-menu{
+	background-image: url("../image/default/btn/btn-menu.png");
 }
-.menu_item-home{
+.btn-backTop{
+	float: right;
+	background-image: url("../image/default/btn/btn-backTop.png");
+}
+.btn-menuItem-home{
 	background-image: url("../image/default/menu/menu_item-home.png");
 }
-.menu_item-copyright{
+.btn-menuItem-copyright{
 	background-image: url("../image/default/menu/menu_item-copyright.png");
 }
-.menu_item-blog:before{
+.btn-menuItem-blog:before{
 	background-color: #00d8cc;
 	background-image: url("../image/default/menu/menu_item-blog.png");
 }
-.menu_item-blog:hover{
+.btn-menuItem-blog:hover{
 	background-color: #00d8cc !important;
 }
-.menu_item-document:before{
+.btn-menuItem-document:before{
 	background-color: #4617b4;
 	background-image: url("../image/default/menu/menu_item-document.png");
 }
-.menu_item-document:hover{
+.btn-menuItem-document:hover{
 	background-color: #4617b4 !important;
 }
-.menu_item-editor:before{
+.btn-menuItem-editor:before{
 	background-color: #78ba00;
 	background-image: url("../image/default/menu/menu_item-editor.png");
 }
-.menu_item-editor:hover{
+.btn-menuItem-editor:hover{
 	background-color: #78ba00 !important;
 }
-.menu_item-favorite:before{
+.btn-menuItem-favorite:before{
 	background-color: #aa40ff;
 	background-image: url("../image/default/menu/menu_item-favorite.png");
 }
-.menu_item-favorite:hover{
+.btn-menuItem-favorite:hover{
 	background-color: #aa40ff !important;
 }
-.menu_item-rss:before{
+.btn-menuItem-rss:before{
 	background-color: #4e0000;
 	background-image: url("../image/default/menu/menu_item-rss.png");
 }
-.menu_item-rss:hover{
+.btn-menuItem-rss:hover{
 	background-color: #4e0000 !important;
 }
-.menu_item-palette:before{
+.btn-menuItem-palette:before{
 	background-color: #ff76bc;
 	background-image: url("../image/default/menu/menu_item-palette.png");
 }
-.menu_item-palette:hover{
+.btn-menuItem-palette:hover{
 	background-color: #ff76bc !important;
 }
