--- a/less/module/module.less
+++ b/less/module/module.less
@@ -171,6 +171,8 @@
 	    position: absolute;
 	    bottom: 0;
 	    left: @module-metro-title-left;
+	    right: 0;
+	    width: auto;
 
 //	    height: @module-metro-title-height;
 
