--- a/less/component/icon.less
+++ b/less/component/icon.less
@@ -6,6 +6,7 @@
 // 图片大小为 20 * 20，添加左边距 30px，位置 5px 5px
 .icon{
 	padding-left: 30px;
+//	padding-left: 26px;
 
 	background-position: 5px 5px;
 	background-repeat: no-repeat;
