--- a/less/index.less
+++ b/less/index.less
@@ -4,14 +4,10 @@
 
 //---------- index 首页特别样式 ----------
 /*body*/.Container.index{
-	background: linear-gradient(135deg, #d0d0d0 22px, #efefef 22px, #efefef 24px, transparent 24px,
-			transparent 67px, #efefef 67px, #efefef 69px, transparent 69px),
-		linear-gradient(225deg, #d0d0d0 22px, #efefef 22px, #efefef 24px, transparent 24px,
-			transparent 67px, #efefef 67px, #efefef 69px, transparent 69px) 0 64px;
-//	background: -ms-linear-gradient(135deg, #d0d0d0 22px, #efefef 22px, #efefef 24px, transparent 24px,
+//	background: linear-gradient(135deg, #d0d0d0 22px, #efefef 22px, #efefef 24px, transparent 24px,
 //			transparent 67px, #efefef 67px, #efefef 69px, transparent 69px),
-//		-ms-linear-gradient(225deg, #d0d0d0 22px, #efefef 22px, #efefef 24px, transparent 24px,
+//		linear-gradient(225deg, #d0d0d0 22px, #efefef 22px, #efefef 24px, transparent 24px,
 //			transparent 67px, #efefef 67px, #efefef 69px, transparent 69px) 0 64px;
-	background-color: #d0d0d0;
-	background-size: 64px 128px;
+//	background-color: #d0d0d0;
+//	background-size: 64px 128px;
 }
