--- a/less/lib/color.less
+++ b/less/lib/color.less
@@ -349,6 +349,7 @@
 
 //----- filter 过滤器 -----
 @filter-bg:             @c141;  // 过滤器组件背景颜色
+//@filter-tag-area-bg:    @c29;   // 过滤器标签区域背景颜色
 @filter-checked-bg:     @c29;   // 过滤器当前所选择的标签
 @filter-all-bg:         @c29;   // 过滤器全部标签背景颜色
 @filter-all-border:     @c2;    // 过滤器全部标签顶部边框颜色
@@ -395,5 +396,5 @@
 @btn-submit-bg:     @c29;   // 提交按钮背景颜色
 
 //----- toolBar 工具条 -----
-@toolBar-bg:        @c29;   // 工具条背景颜色
-@toolBar-border:    @c141;  // 工具条边框颜色
+@toolBar-bg:        @c141;  //@c29;   // 工具条背景颜色
+//@toolBar-border:    @c141;  // 工具条边框颜色
