--- a/less/lib/grid.less
+++ b/less/lib/grid.less
@@ -116,11 +116,11 @@
 
 //----- filter 过滤器 -----
 @filter-min-height:             30px;   // 过滤器最小高度
-@filter-all-tag-left:           -@space;    // 过滤器所有标签左偏移
+@filter-all-tag-left:           10px;   //@space;    // 过滤器所有标签左偏移
 @filter-all-tag-height:         360px;  // 过滤器所有标签区域高度
-@filter-all-tag-border-width:   1px;    // 过滤器所有标签区域边框宽度
-@filter-all-tag-padding:        10px;   // 过滤器所有标签内边距
-@filter-tag-margin:             10px;   // 过滤器所有标签外间距
+//@filter-all-tag-border-width:   1px;    // 过滤器所有标签区域边框宽度
+@filter-all-tag-padding:        5px;    //10px;   // 过滤器所有标签内边距
+@filter-tag-margin:             5px;    //10px;   // 过滤器所有标签外间距
 
 //----- page 页码 -----
 @page-margin:   10px;   // 页码外边距
