--- a/template/header.html
+++ b/template/header.html
@@ -1,27 +1,27 @@
 <header class="Header">
 	<nav class="module module-header module-large" id="header">
-		<a class="btn btn-link btn-menuItem btn-menuItem-home" id="home" href="" title="返回首页"></a>
+		<a class="btn btn-link btn-menuItem btn-menuItem-home" id="home" href="%STATIC_PATH%" title="返回首页"></a>
 
 		<button class="btn btn-menu {hidden}" id="menu" type="button" title="显示菜单"></button>
 
 		<ul id="headerMenu" class="menu hidden">
 			<li>
-				<a class="btn btn-link btn-menuItem btn-menuItem-blog" title="博客" href="blog/">博客<br />blog</a>
+				<a class="btn btn-link btn-menuItem btn-menuItem-blog" title="博客" href="%STATIC_PATH%blog/">博客<br />blog</a>
 			</li>
 			<li>
-				<a class="btn btn-link btn-menuItem btn-menuItem-document" title="前端文档" href="document/">前端文档<br />document</a>
+				<a class="btn btn-link btn-menuItem btn-menuItem-document" title="前端文档" href="%STATIC_PATH%document/">前端文档<br />document</a>
 			</li>
 			<li>
-				<a class="btn btn-link btn-menuItem btn-menuItem-editor" title="编辑器" href="editor/">编辑器<br />editor</a>
+				<a class="btn btn-link btn-menuItem btn-menuItem-editor" title="编辑器" href="%STATIC_PATH%editor/">编辑器<br />editor</a>
 			</li>
 			<li>
-				<a class="btn btn-link btn-menuItem btn-menuItem-favorite" title="收藏夹" href="favorite/">收藏夹<br />favorite</a>
+				<a class="btn btn-link btn-menuItem btn-menuItem-favorite" title="收藏夹" href="%STATIC_PATH%favorite/">收藏夹<br />favorite</a>
 			</li>
 			<li>
-				<a class="btn btn-link btn-menuItem btn-menuItem-rss" title="订阅" href="rss/">订阅<br />rss</a>
+				<a class="btn btn-link btn-menuItem btn-menuItem-rss" title="订阅" href="%STATIC_PATH%rss/">订阅<br />rss</a>
 			</li>
 			<li>
-				<a class="btn btn-link btn-menuItem btn-menuItem-palette" title="调色板" href="palette/">调色板<br />palette</a>
+				<a class="btn btn-link btn-menuItem btn-menuItem-palette" title="调色板" href="%STATIC_PATH%palette/">调色板<br />palette</a>
 			</li>
 		</ul>
 
