--- a/template/style.html
+++ b/template/style.html
@@ -1,12 +1,16 @@
+<meta charset="utf-8" />
+<!--[if lt IE 9]><meta http-equiv="content-type" content="text/html; charset=utf-8" /><![endif]-->
+<meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1" />
+<title>%PAGE_TITLE%</title>
 <meta name="author" content="周文博" />
 <meta name="description" content="小小的前端工程师，自说自话，自娱自乐的小网站" />
 <meta name="keywords" content="web,前端,html,html5,css,css3,javascript" />
 <meta name="msapplication-TileColor" content="#44cef6"/><!-- win 8 磁贴颜色 -->
-<meta name="msapplication-TileImage" content="image/favicon.png"/><!-- win 8 磁贴图标 -->
-<link rel="shortcut icon" type="image/x-icon" href="image/favicon.ico" />
-<link rel="stylesheet" href="style/style.css" />
-<link rel="stylesheet" href="script/plugin/clippy/clippy.css" />
+<meta name="msapplication-TileImage" content="%STATIC_PATH%image/favicon.png"/><!-- win 8 磁贴图标 -->
+<link rel="shortcut icon" type="image/x-icon" href="%STATIC_PATH%image/favicon.ico" />
+<link rel="stylesheet" href="%STATIC_PATH%style/style.css" />
+<link rel="stylesheet" href="%STATIC_PATH%script/plugin/clippy/clippy.css" />
 <!--[if lt IE 9]>
-<link rel="stylesheet" href="style/ie.css" />
-<script src="script/lib/html5shiv/html5shiv.min.js"></script>
+<link rel="stylesheet" href="%STATIC_PATH%style/ie.css" />
+<script src="%STATIC_PATH%script/lib/html5shiv/html5shiv.min.js"></script>
 <![endif]-->
