--- a/less/component/btn.less
+++ b/less/component/btn.less
@@ -14,23 +14,25 @@
 	height: @line-height;
 	min-width: @btn-min-width;
 
-	border: @btn-border-width solid @btn-border;
-//	border-radius: @border-radius;
+	border: none;
+//	border: @btn-border-width solid #e0e0e0; //@btn-border;
+	border-radius: @border-radius;
 
-	margin: 0 @btn-margin @btn-margin 0;
+//	margin: 0 @btn-margin @btn-margin 0;
+	margin: @btn-margin 0 0 @btn-margin;
 	padding: 0 @padding-lr;
 
 	background-color: @btn-default-bg;
 
-	/**
-	 * 当使用背景图片时或与 .icon 联用时
-	 */
-	background-position: 3px 3px !important;
+//	/**
+//	 * 当使用背景图片时或与 .icon 联用时
+//	 */
+//	background-position: 3px 3px !important;
 
 	color: @font-color;
 	font-family: Consolas, \5b8b\4f53;
 	font-size: 16px;
-	line-height: @line-height - @btn-border-width *2;
+	line-height: 200%;  // @line-height;  // - @btn-border-width *2;
 
 //	opacity: 0.9;
 
