--- a/less/component/filter.less
+++ b/less/component/filter.less
@@ -64,12 +64,25 @@
 }
 .filter_tagArea{
 	clear: both;
+	float: left;
+	width: 100%;
+
+//	margin-top: 5px;
+
+	&:before{
+		content: "";
+	}
 }
 
 .filter_checked{    // 当前过滤标签
     overflow: hidden;
 
 	clear: both;
+
+	margin-left: 10px;
+	padding-left: 5px;
+
+	background: @filter-checked-bg;
 
 //	.filter_tag{
 //		margin: 0 @space @space 0;
@@ -89,12 +102,13 @@
 
 	background: @filter-all-bg;
 }
-.filter_tag{    // 过滤标签
+/*label*/.filter_tag{    // 过滤标签
     float: left;
 
     border-radius: @border-radius;
 
-	margin: 0 @filter-tag-margin @filter-tag-margin 0;
+//	margin: 0 @filter-tag-margin @filter-tag-margin 0;
+	margin: @filter-tag-margin; // 0 0 @filter-tag-margin;
     padding: 0 @padding-lr;
 
 	background: @filter-tag-bg;
