--- a/less/component/toolBar.less
+++ b/less/component/toolBar.less
@@ -19,11 +19,12 @@
 
 	min-height: 40px;
 
-	border: @toolbar-border-width solid @toolBar-border;
-	border-bottom: 0;
-	border-right: 0;
+//	border: @toolbar-border-width solid @toolBar-border;
+//	border-bottom: 0;
+//	border-right: 0;
 	margin: 0 0 0 @toolBar-margin;
-	padding: @toolBar-padding 0 0 @toolBar-padding;
+//	padding: @toolBar-padding 0 0 @toolBar-padding;
 
-	background: @toolBar-bg;
+//	background: @toolBar-bg;
+	background: @font-color;
 }
