--- a/less/module/header.less
+++ b/less/module/header.less
@@ -38,7 +38,8 @@
 		min-width: 60px;
 
 		border: none;
-//		margin: 0 @space 0 0;
+		border-radius: 0;
+		margin: 0 @space 0 0;
 //		padding: 0;
 //		padding-left: 80px;
 
