--- a/template/index.html
+++ b/template/index.html
@@ -1,117 +1,22 @@
 <!DOCTYPE html>
 <html lang="zh-CN">
-<head>
-	<meta charset="utf-8" />
-	<!--[if lt IE 9]><meta http-equiv="content-type" content="text/html; charset=utf-8" /><![endif]-->
-	<meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1" />
-	<title>个人小站（开发测试中...）</title>
-	<meta name="author" content="周文博" />
-	<meta name="description" content="小小的前端工程师，自说自话，自娱自乐的小网站" />
-	<meta name="keywords" content="web,前端,html,html5,css,css3,javascript" />
-	<meta name="msapplication-TileColor" content="#44cef6"/><!-- win 8 磁贴颜色 -->
-	<meta name="msapplication-TileImage" content="image/favicon.png"/><!-- win 8 磁贴图标 -->
-	<link rel="shortcut icon" type="image/x-icon" href="image/favicon.ico" />
-	<link rel="stylesheet" href="style/style.css" />
-	<link rel="stylesheet" href="script/plugin/clippy/clippy.css" />
-	<!--[if lt IE 9]>
-	<link rel="stylesheet" href="style/ie.css" />
-	<script src="script/lib/html5shiv/html5shiv.min.js"></script>
-	<![endif]-->
-</head>
+<head>%STYLE_HTML%</head>
 <body class="Container index">
-<header class="Header">
-
-	<nav class="module module-header module-large" id="header">
-		<a class="btn btn-link btn-menuItem btn-menuItem-home" id="home" href="" title="返回首页"></a>
-
-		<button class="btn btn-menu hidden" id="menu" type="button" title="显示菜单"></button>
-
-		<ul id="headerMenu" class="menu hidden">
-			<li>
-				<a class="btn btn-link btn-menuItem btn-menuItem-blog" title="博客" href="blog/">博客<br />blog</a>
-			</li>
-			<li>
-				<a class="btn btn-link btn-menuItem btn-menuItem-document" title="前端文档" href="document/">前端文档<br />document</a>
-			</li>
-			<li>
-				<a class="btn btn-link btn-menuItem btn-menuItem-editor" title="编辑器" href="editor/">编辑器<br />editor</a>
-			</li>
-			<li>
-				<a class="btn btn-link btn-menuItem btn-menuItem-favorite" title="收藏夹" href="favorite/">收藏夹<br />favorite</a>
-			</li>
-			<li>
-				<a class="btn btn-link btn-menuItem btn-menuItem-rss" title="订阅" href="rss/">订阅<br />rss</a>
-			</li>
-			<li>
-				<a class="btn btn-link btn-menuItem btn-menuItem-palette" title="调色板" href="palette/">调色板<br />palette</a>
-			</li>
-		</ul>
-
-		<button class="btn btn-menuItem btn-menuItem-copyright" id="copyright" type="button"
-				title="copyright &copy; 2014 周文博 All rights reserved"></button>
-
-		<button class="btn btn-backTop hidden" id="backTop" type="button" title="回到顶部"></button>
-	</nav>
-
-	<!--
-		<div class="module module-large module-header">
-			<h1 id="logo" class="logo">
-				<a href="">自娱自乐</a>
-			</h1>
-			<div id="userCard" class="userCard userCard-header userCard-min">
-				<img class="userCard_avatar" src="image/default/default_avatar.jpg" width="60" height="60" alt="" />
-
-				<form id="loginForm" class="form" action="user/userLogin.php">
-					<input type="text" class="input" name="email" id="email" data-validator="email" placeholder="电子邮箱" />
-					<label for="email" class="tips tips-bottom hidden"></label>
-					<input type="password" class="input" name="password" id="password" data-validator="password" placeholder="密码" />
-					<label for="password" class="tips tips-bottom hidden"></label>
-					<input type="submit" class="btn btn-submit" id="btnSubmit" value="登录"/>
-				</form>
-			</div>
-
-			<div id="userMsg" class="tips tips-left hidden">
-				<div id="userMsgContent" class="tips_content"></div>
-				<span class="tips_arrow hidden"></span>
-			</div>
-		</div>
-	-->
-
-	<!--
-		<h1>Welcome to { user_name }'s blog</h1>
-		<p>游离于理想与现实之间，还会坚持，坚持到坚持不下去为止
-			<br/>和设计师一样细腻，
-			<br/>和工程师一样严谨；
-			<br/>游走在设计师和工程师之间，
-			<br/>游刃于用户体验和技术实现之间，
-			<br/>斡旋在用户利益和商业利益之间。
-			<br/>——前端开发工程师
-
-			<br/>为API生，为框架死，为debug奋斗一辈子，吃符号亏，上大小写的当，最后死在需求上~
-		</p>
-	-->
-</header>
+%HEADER_HTML%
 <a href="blog/">
 	<section class="module module-metro module-big module-blog">
-		<h2 class="module_title">
-			博客 blog
-		</h2>
-		<span class="module_info"></span>
+		<h2 class="module_title">博客 blog</h2>
 	</section>
 </a>
 
 <a href="">
 	<section class="module module-metro module-tiny module-user">
-		<h2 class="module_title">
-			我 me
-		</h2>
+		<h2 class="module_title">我 me</h2>
 	</section>
 </a>
 
 <section class="module module-metro module-tiny module-watch">
-	<h2 class="module_title">
-		时间 time
-	</h2>
+	<h2 class="module_title">时间 time</h2>
 	<div class="watch_wrap hidden" id="watch">
 		<span class="watch_hourHand" id="hourHand"></span>
 		<span class="watch_minuteHand" id="minuteHand"></span>
@@ -131,140 +36,47 @@
 	</div>
 </section>
 
-<!--<a href="calendar/">-->
 <section class="module module-metro module-small module-calendar" id="calendar">
-	<h2 class="module_title">
-		日历 calendar
-	</h2>
+	<h2 class="module_title">日历 calendar</h2>
 	<span class="module_info">2014 年 05 月</span>
 	<div class="calendar_today">30</div>
 </section>
-<!--</a>-->
 
 <section class="module module-metro module-small module-weather" id="weather">
-	<h2 class="module_title">
-		天气预报 weather
-	</h2>
+	<h2 class="module_title">天气预报 weather</h2>
 	<span class="module_info"></span>
 </section>
 
 <a href="document/">
 	<section class="module module-metro module-small module-document">
-		<h2 class="module_title">
-			前端文档 document
-		</h2>
+		<h2 class="module_title">前端文档 document</h2>
 	</section>
 </a>
 
 <a href="editor/">
 	<section class="module module-metro module-small module-editor">
-		<h2 class="module_title">
-			编辑器 editor
-		</h2>
-		<span class="module_info"></span>
+		<h2 class="module_title">编辑器 editor</h2>
 	</section>
 </a>
 
 <a href="favorite">
 	<section class="module module-metro module-normal module-favor">
-		<h2 class="module_title">
-			收藏夹 favorite
-		</h2>
+		<h2 class="module_title">收藏夹 favorite</h2>
 	</section>
 </a>
 
 <a href="palette/">
 	<section class="module module-metro module-small module-palette">
-		<h2 class="module_title">
-			调色板 palette
-		</h2>
+		<h2 class="module_title">调色板 palette</h2>
 	</section>
 </a>
 
 <a href="rss/">
 	<section class="module module-metro module-normal module-rss">
-		<h2 class="module_title">
-			订阅 rss
-		</h2>
+		<h2 class="module_title">订阅 rss</h2>
 	</section>
 </a>
-<!--
-<a href="timeLine/">
-    <section class="module module-metro module-small module-timeLine">
-        <h2 class="module_title">时光轴 timeLine</h2>
-    </section>
-</a>
--->
-<!--
-    <section class="module module-metro module-tiny module-music">
-        <h2 class="module_title">音乐 music</h2>
-        <span class="module_info"></span>
-    </section>
--->
-<!--
-    <section class="module module-metro module-tiny module-picture">
-        <h2 class="module_title">相册 album</h2>
-        <span class="module_info"></span>
-        <img src="" alt="" />
-    </section>
--->
-<!--    <section class="module module-metro module-tiny module-rss"></section>-->
-<!--    <section class="module module-metro module-tiny module-mail"></section>-->
-<!--
-    <section class="module module-metro module-tiny module-news">
-        <h2 class="module_title">新闻 news</h2>
-        <span class="module_info">123</span>
-    </section>
--->
-<!--    <section class="module module-metro module-tiny module-market"></section>-->
-<!--<footer class="Footer">-->
-<!--<div class="module module-footer module-link module-large">-->
-<!--
-	    <h2 class="module_title">网站地图</h2>
-	    <nav>
-	        <h3>导航</h3>
-	        <ul>
-	            <li><a href="">首页</a></li>
-	            <li><a href="document/">前端文档</a></li>
-	            <li><a href="palette/">调色板</a></li>
-	        </ul>
-	    </nav>
-	    <nav>
-	        <h3>联系我们</h3>
-	    </nav>
-	    <section>
-	        <h3>更新记录</h3>
-	    </section>
--->
-<!--	<p>copyright &copy; --><!-- 周文博 All rights reserved </p>-->
-<!--</div>-->
-<!--</footer>-->
-
-<section class="module module-large module-advert hidden">
-	<h2 class="module_title">可耻的广告区</h2>
-</section>
-
-<div class="clearfix"></div>
-
-<div id="statistics" class="hidden"></div>
-<script>
-	var USER_INFO = {"username":"\u5341\u752b\u5bf8","avatar":"image\/upload\/1.jpg","description":"\u5c0f\u5c0f\u7684 Web \u524d\u7aef\u5de5\u7a0b\u5e08\uff0c\u504f\u5b9e\u8df5\uff0c\u5f31\u7406\u8bba\uff0c\u81ea\u8bf4\u81ea\u8bdd\uff0c\u81ea\u5a31\u81ea\u4e50\uff0c\u53ea\u6c42\u6709\u751f\u4e4b\u5e74\u505a\u4e00\u4e2a\u81ea\u5df1\u6ee1\u610f\u7684\u9879\u76ee\uff0c\u6216\u8005\u5f97\u5230\u6c38\u751f\u3002\u3002\u3002"},
-			shim = ['jquery'],
-			MODULE_CONFIG = MODULE_CONFIG || {
-				shim:{
-					extend:shim,
-					clippy:shim,
-					validator:shim
-				},
-				paths:{
-					jquery:'lib/jQuery/jquery.min',
-					global:'module/global',
-					extend:'ui/jquery.extend',
-					clippy:'plugin/clippy/clippy.min',
-					validator:'ui/jquery.validator'
-				}
-			};
-</script>
-<!--[if lt IE 9]><script src="script/ie.js"></script><![endif]--><script data-main="script/index" src="script/lib/require/require.js"></script>
+%FOOTER_HTML%
+<script data-main="script/index" src="script/lib/require/require.js"></script>
 </body>
 </html>
